# scoopy

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: scoopy_wip.ipynb
scoopy/: __init__.py  base.py  data_sources.py  util.py
scoopy/examples/: __init__.py  search_and_save_news.py
